[metadata]
name = GeoMACH
version = 0.1
summary =ict
description-file = 
keywords = science
home-page = http.//
download-url = geomach.com
author =GeoMach
author-email = george_macharia@ymail.com
maintainer = geomach
maintainer-email = george_macharia@ymail.com
license = LGPL
classifier = Intended Audience :: Science/Research
	Topic :: communication
requires-dist = 
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = www.geomach.com

[openmdao]
copyright =(c)
static_path = [ '_static' ]
